// Face Recognition System - Database ERD
// Copy and paste to: https://dbdiagram.io/
// Database: students.db (SQLite)

Table students {
  nis varchar [primary key, note: 'Nomor Induk Siswa']
  nama varchar [not null, note: 'Nama lengkap siswa']
  kelas varchar [not null, note: 'Kelas (contoh: 1B, 3A, TK-A)']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table parents {
  id integer [primary key, increment]
  nis varchar [not null, note: 'Link ke students']
  nama_ortu varchar [not null, note: 'Nama orang tua/wali']
  embedding_index integer [not null, unique, note: 'Index di embeddings.npy']
  enrolled_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table face_embeddings {
  index integer [primary key, note: 'Array index (stored in .npy file)']
  embedding varchar [note: '512-D vector (NumPy array)']
  
  Note: 'External file: face_db/embeddings.npy'
}

Table qr_codes {
  nis varchar [primary key, note: 'NIS.png (one QR per student)']
  qr_content varchar [note: 'Format: hash:nis']
  
  Note: 'External files: qr_codes/*.png'
}

// Relationships
Ref: parents.nis > students.nis // many-to-one (multiple parents per student)
Ref: parents.embedding_index - face_embeddings.index // one-to-one
Ref: qr_codes.nis - students.nis // one-to-one (one QR per student)
